Completed homework assignment

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <title>Hello Front-End</title>
+  <title></title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <header>
+  <h1>Meet Guidebooks</h1>
+  <h2>Discover hundreds of local spots recommended by Airbnb hosts</h2>
+</header>
+
+<div class="top-images">    
+  <img src="/Users/FrostyAusty/sei/deliverables/Deliverable-2-AirBnb/img/san-francisco.jpg"> 
+  <img src="/Users/FrostyAusty/sei/deliverables/Deliverable-2-AirBnb/img/new-york.jpg">
+  <img src="/Users/FrostyAusty/sei/deliverables/Deliverable-2-AirBnb/img/london.jpg">
+</div>
+
+<div class="middle-part">
+  <p>Just for the Weekend</p>
+  <p>Discover new, inspiring places close to home.</p>
+</div>
+
+<button class="destinations">Destination</button>
+
+<div class="bottom-image">
+<img src="/Users/FrostyAusty/sei/deliverables/Deliverable-2-AirBnb/img/napa.jpg">
+  <img src="/Users/FrostyAusty/sei/deliverables/Deliverable-2-AirBnb/img/Sonoma.jpg">
+  <img src="/Users/FrostyAusty/sei/deliverables/Deliverable-2-AirBnb/img/san-francisco-2.jpg">
+  </div>
+<div class="button-set">
+  <button>See All Destinations</button>
+</div>  
+  
+  
 </body>
 </html>
